--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -10,10 +10,12 @@ containers: #容器，可配置多个
     password: admin
   - path: /Users/cdle/Desktop/jd_study/jdc/config.sh #本地配置文件路径 v1v2v3v4v5和不知名容器的配置
   - path: /Users/cdle/Desktop/jd_study/jdc/list.sh
-qrcode: #自定义二维码页面，支持本地、网络路径
+theme:  #自定义主题，支持本地、网络路径
 static: ./static #静态文件 便于自定义二维码页面时，引入css、js等文件
 master: #管理员账户pin，有多个用'&'拼接
 database:  #数据库位置，默认./.jdc.db
 qywx_key:  #企业微信推送key
-daily_push: #定时任务 
+daily_push: #定时任务
 resident: #均衡模式下所有容器共同的账号pin，有多个用'&'拼接。不建议填写，后续实现指定账号助力功能。
+#自定义ua
+user_agent:  
